<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/green"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Parametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/parametre"
                android:textColor="#000000"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/Activer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activer_d_sactiver_les_exercices"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/SwitchAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/addition" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchsoustraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/soustraction" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchmultiplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/multiplication" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchdivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/division" />


            </LinearLayout>







        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>